# Hekmatica

./: .gitignore  README.md  agent.py  hekmatica_agent.py  langgraph.json  pyproject.toml  tools.py  vis_agent_diagram.ipynb
.cursor/rules/: bamldocs.mdc  langgraphdocs.mdc
agents/: agent_studio.py
agents/browser_use/: browser_use_test.py
agents/deep_research/: agent.py  graph.py  state.py
agents/rag/: rag_agent.py
baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: answer_question.baml  clarify_question.baml  clients.baml  critique_answer.baml  filter_results.baml  generate_subqueries.baml  plan_steps.baml  rank_results.baml  reason_act.baml
baml_src/rag_agent/: llm_calls.baml
data/: test_rag.md
tools/: address_transaction_tracker.py  get_on_chain_data.py  get_price.py  web_search.py
